<resources>
    <string name="app_name" translatable="false">DeclarationTest</string>
    <string name="title_home">Searching</string>
    <string name="title_notifications">About</string>
    <string name="position">Position:</string>
    <string name="position_name" translatable="false">Position Name</string>
    <string name="patronymic" translatable="false">Patronymic</string>
    <string name="pdf">PDF</string>
    <string name="favorites">favorites</string>
    <string name="first_second_name">First Second Name</string>
    <string name="title">State register of declarations</string>
    <string name="field_cannot_be_empty">Field cannot be empty!</string>
    <string name="no_results">No results</string>
    <string name="search_not_avilable">Search is not available at the moment, please check your network connection</string>
    <string name="searching">Serching...</string>
    <string name="title_favorites">Favorites</string>
    <string name="add_comment">Add comment</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="notes">notes</string>
</resources>
