<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="1dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/pdf_link_pic"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="top"
            android:layout_margin="5dp"
            android:clickable="true"
            android:contentDescription="@string/pdf"
            android:focusable="true"
            android:src="@drawable/pdf_icon" />

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/first_second_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/first_second_name"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/patronymic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/patronymic"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/position"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/position"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/position_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/position_name"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_gravity="bottom"
            android:gravity="bottom"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/notes"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:clickable="true"
                android:visibility="invisible"
                android:contentDescription="@string/notes"
                android:focusable="true"
                app:srcCompat="@drawable/note_grey" />

            <ImageView
                android:id="@+id/empty_star"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_margin="5dp"
                android:clickable="true"
                android:contentDescription="@string/favorites"
                android:focusable="true"
                app:srcCompat="@android:drawable/btn_star" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>